--- a/Banking.Tests/Banking.Tests.csproj
+++ b/Banking.Tests/Banking.Tests.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Domain\BankAccountTest2.cs" />
+    <Compile Remove="Models\Domain\BankAccountTransactionTest.cs" />
+    <Compile Remove="Models\Domain\SavingsAccountTest.cs" />
+    <Compile Remove="Models\Domain\TransactionTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -14,6 +21,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Banking\Banking.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Domain\" />
   </ItemGroup>
 
 </Project>
